po: update po/sv_SE/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/drupal-civicrm.po
+++ b/po/sv_SE/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-03-21 14:29+0000\n"
+"PO-Revision-Date: 2016-04-26 13:17+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -582,7 +582,7 @@ msgid ""
 "used for 'Profile' listings in its Settings OR there is no Profile with that"
 " ID OR you do not have permission to access this profile. Please contact the"
 " site administrator if you need assistance."
-msgstr "Den begärda profilen (gid =%1) är inaktiverad ELLER har inte konfigurerats för att användas för profillistor i inställningar ELLER finns det ingen profil med detta ID ELLER har du inte behörighet till den här profilen. Vänligen kontakta sidans administratör om du behöver hjälp."
+msgstr "Den begärda profilen (gid =%1) är avaktiverad ELLER har inte konfigurerats för att användas för profillistor i inställningar ELLER finns det ingen profil med detta ID ELLER har du inte behörighet till den här profilen. Vänligen kontakta sidans administratör om du behöver hjälp."
 
 #: drupal/civicrm.module
 msgid "View Contact Record"
