--- a/po/sv_SE/install.po
+++ b/po/sv_SE/install.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-04-01 11:01+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 09:59+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -123,6 +123,16 @@ msgstr ""
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
+msgstr ""
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
 msgstr ""
 
 #: install/index.php
@@ -378,7 +388,7 @@ msgstr "Kunde skapa ny databas."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "Användaren '%1' har inte rättigheten CREATE DATABASE"
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
@@ -386,7 +396,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "Hoppsan! Kunde inte skapa databas %1"
 
 #: install/index.php
 msgid ""
