--- a/po/sv_SE/pcp.po
+++ b/po/sv_SE/pcp.po
@@ -5,13 +5,13 @@
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-13 14:02+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,6 +35,10 @@ msgstr "Redigera din sida"
 msgid "Tell Friends"
 msgstr "Tipsa vänner"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL för den här sidan"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Uppdatera kontaktinformation"
@@ -48,8 +52,8 @@ msgid "Approval required"
 msgstr "Godkännande krävs"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Anhängarprofil"
+msgid "Owner Email Notification"
+msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -69,14 +73,14 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
 msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
 msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
@@ -151,7 +155,13 @@ msgstr "Epost skickad"
 msgid ""
 "Supporter profile is not set for this Personal Campaign Page or the profile "
 "is disabled. Please contact the site administrator if you need assistance."
-msgstr "Supporterprofilen är inte inställd för den här privata kampanjsidan eller så kan profilen vara inaktiverad. Vänligen kontakta administratören om du behöver assistans."
+msgstr "Supporterprofilen är inte inställd för den här privata kampanjsidan eller så kan profilen vara avaktiverad. Vänligen kontakta administratören om du behöver assistans."
+
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr ""
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
@@ -187,6 +197,10 @@ msgid "Target Entity Type"
 msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr ""
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr ""
 
@@ -201,6 +215,10 @@ msgstr "Konfigurera en privat kampanjsida - Steg 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Redigera din privata kampanjsida"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr "Välkommen"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -235,26 +253,16 @@ msgid "Honor Roll"
 msgstr "Hedersroll"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Meddela mig via e-post när någon donerar till min sida"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Målsumman borde vara ett numeriskt värde som är större än noll."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Knappens text måste vara färre än 64 tecken."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Ditt foto eller bildfilen kan inte vara större än 360 x 360 pixlar i storlek."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Dimensionerna av bilden som du har valt är %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Vänligen minska eller beskär filen eller hitta en annan mindre bild och försök igen."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -346,7 +354,7 @@ msgstr "Kampanjsidan '%1' har stängts av."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Disabled"
-msgstr "Sidan är inaktiverad"
+msgstr "Sidan är avaktiverad"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been enabled."
@@ -359,10 +367,6 @@ msgstr "Sidan är aktiverad"
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
 msgstr "Typ av källa"
-
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Sida för händelse"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -438,6 +442,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Skicka e-postmeddelanden till dina vänner om att de ska stötta din kampanj!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Kopiera den här länken för att dela direkt med ditt nätverk!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Uppdatera din privata kontaktinformation"
 
@@ -477,8 +485,14 @@ msgstr ""
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr ""
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
 msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp
@@ -488,10 +502,6 @@ msgid ""
 "contribution.  Contributions from people who come in through a Personal "
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
-msgstr ""
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
 msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
@@ -728,6 +738,38 @@ msgstr "Visa sida"
 msgid "Linked to Contribution Page"
 msgstr ""
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Du har tagit emot en donation till din privata sida"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "Donatorns information listas nedan. Du kan välja att kontakta dem och framföra dina tacksägelser om du vill."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr ""
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Någon har just donerat till din privata kampanjsida"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr ""
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -760,8 +802,8 @@ msgstr "Gå till din sida"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
 msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
@@ -780,8 +822,9 @@ msgstr "Frågor? Skicka e-post till"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
 msgstr ""
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
@@ -877,102 +920,42 @@ msgstr "Klicka eller klistra in den här länken till din webbläsare och följ 
 msgid "Click or paste this link into your browser"
 msgstr "Klicka eller klistra in den här länken till din webbläsare"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL för den här sidan"
-
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Kopiera den här länken för att dela direkt med ditt nätverk!"
-
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
 msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr ""
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
 msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
+msgid "PCP Block ID"
 msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Meddela mig via e-post när någon donerar till min sida"
-
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
 msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Du har tagit emot en donation till din privata sida"
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
 msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "Donatorns information listas nedan. Du kan välja att kontakta dem och framföra dina tacksägelser om du vill."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr "Godkännande krävs?"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr ""
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr "Är \"Berätta för en vän\" aktivierad?"
 
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Någon har just donerat till din privata kampanjsida"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr ""
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
 msgstr ""
