--- a/po/sv_SE/queue.po
+++ b/po/sv_SE/queue.po
@@ -6,12 +6,13 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
 # Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 09:08+0000\n"
-"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-13 13:20+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,3 +39,7 @@ msgstr "Kö objektdata"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Kö Springare"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "Kö-ID"
