--- a/po/ta/queue.po
+++ b/po/ta/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -7,11 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2013-05-31 09:06-0400\n"
-"PO-Revision-Date: 2013-07-30 15:21+0000\n"
-"Last-Translator: rajeshs <rajesh@millertech.co.uk>\n"
-"Language-Team: Tamil (http://www.transifex.com/projects/p/civicrm/language/ta/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +36,7 @@ msgstr "வரிசை உருப்படியை தேதிகள்"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "வரிசை ரன்னர்"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
