--- a/po/th_TH/menu.po
+++ b/po/th_TH/menu.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Thai (Thailand) (http://www.transifex.com/civicrm/civicrm/language/th_TH/)\n"
 "MIME-Version: 1.0\n"
@@ -129,8 +129,8 @@ msgid "Case Activity"
 msgstr "ปัญหาอยู่ในระหว่างการดำเนินการ"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "รายงานปัญหา"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -149,7 +149,7 @@ msgid "Assign to Another Client"
 msgstr ""
 
 msgctxt "menu"
-msgid "Build Activity To Case"
+msgid "File on Case"
 msgstr ""
 
 msgctxt "menu"
@@ -173,10 +173,6 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Encounter Mediums"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Activity Status"
 msgstr ""
 
 msgctxt "menu"
@@ -252,6 +248,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr ""
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -269,9 +269,15 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr ""
@@ -321,6 +327,23 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
+msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -475,6 +498,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr ""
 
@@ -508,10 +536,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr ""
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr ""
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -529,6 +553,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr ""
 
@@ -542,9 +571,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "ภาษา, สกุลเงิน, สถานที่ตั้ง"
+msgid "Languages, Currency, Locations"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -695,10 +725,6 @@ msgid "Administer CiviCRM"
 msgstr ""
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr ""
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr ""
 
@@ -765,10 +791,6 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Custom Searches"
-msgstr ""
-
-msgctxt "menu"
-msgid "Simple Search"
 msgstr ""
 
 msgctxt "menu"
@@ -861,6 +883,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr ""
 
@@ -915,6 +941,10 @@ msgid "Import Activities"
 msgstr "นำเข้าข้อมูลความเคลื่อนไหว"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "อัพเกรด CiviCRM"
 
@@ -951,12 +981,16 @@ msgid "Browse Uploaded files"
 msgstr "เลือกดูไฟล์ที่อัพโหลด"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "ออกจากระบบ"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -969,6 +1003,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1066,6 +1104,10 @@ msgid "Event Online Registration"
 msgstr "สมัครลงทะเบียนเข้าร่วมกิจกรรมออนไลน์"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr ""
 
@@ -1098,6 +1140,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "View Cart"
+msgstr ""
+
+msgctxt "menu"
+msgid "Change Registration Selections"
 msgstr ""
 
 msgctxt "menu"
@@ -1153,7 +1199,7 @@ msgid "Resubscribe"
 msgstr ""
 
 msgctxt "menu"
-msgid "Optout"
+msgid "Opt-out"
 msgstr ""
 
 msgctxt "menu"
@@ -1288,6 +1334,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1427,6 +1478,16 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr ""
 
@@ -1532,11 +1593,6 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr ""
 
@@ -1554,6 +1610,11 @@ msgstr ""
 msgctxt "menu"
 msgid "System Settings"
 msgstr "ตั้งค่าระบบ"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1622,6 +1683,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr ""
 
@@ -1632,8 +1698,13 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "ช่วยเหลือ"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1642,18 +1713,43 @@ msgstr "เอกสารประกอบ"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
+msgid "Ask a question"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
+msgid "Get expert help"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "เกี่ยวกับ"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1880,6 +1976,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr ""
 
@@ -2049,144 +2150,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
