po: update po/tr_TR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/drupal-civicrm.po
+++ b/po/tr_TR/drupal-civicrm.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2015
+# Kaya Zeren <kayazeren@gmail.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-10-24 07:20+0000\n"
+"PO-Revision-Date: 2016-05-11 05:54+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 msgid ""
 "Add/remove association rules and configure settings. Also perform manual "
 "synchronization."
-msgstr "İlişkilendirme kurallarını ekleyin ya da kaldırın ve ayarlayın. Ayrıca el ile eşleştirme yapın."
+msgstr "İlişkilendirme kurallarını ekleyin ya da kaldırın ve ayarlayın. Ayrıca el ile eşitleyin."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
@@ -2567,7 +2567,7 @@ msgstr "CiviMember Üyelikleri ile Drupal Rolleri, varolan kurallara göre eşit
 msgid ""
 "There was an error. CiviMember Memberships and Drupal Roles could not be "
 "synchronized."
-msgstr "CiviMember Üyelik Tipleri ile Drupal Rollerini eşitlenirken bir sorun çıktı."
+msgstr "CiviMember Üyelik Tipleri ile Drupal Rolleri eşitlenirken bir sorun çıktı."
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Settings"
@@ -2849,11 +2849,11 @@ msgstr "Grup seçin"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be added to selected group."
-msgstr "Kişi seçilen gruba eklenecek."
+msgstr "Kişi seçilmiş gruba eklenecek."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be removed from selected group."
-msgstr "Kişi seçilen gruptan çıkarılacak."
+msgstr "Kişi seçilmiş gruptan çıkarılacak."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact"
