po: update po/tr_TR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/batch.po
+++ b/po/tr_TR/batch.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2015
+# Kaya Zeren <kayazeren@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-05-20 23:04+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:12+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
-"Language-Team: Turkish (http://www.transifex.com/projects/p/civicrm/language/tr/)\n"
+"Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -32,6 +32,10 @@ msgstr "Toplu İşlem Hareketleri Ekleyin/Görüntüleyin"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Toplu İşlemi Yeniden Açın"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr "Toplu İşlemi Silin"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -58,12 +62,52 @@ msgid "No export format selected."
 msgstr "Bir verme biçimi seçilmemiş."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Verilme Tarihi"
+msgid "Batch ID"
+msgstr "Toplu İşlem Kodu"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Öge Sayısı"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Toplu İşlem Açıklaması"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Toplu İşlemi Oluşturan"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Toplu İşlem Oluşturulma Tarihi"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Toplu İşlemi Değiştiren"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Toplu İşlem Değişiklik Tarihi"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Toplu İşlem Akıllı Grubu"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Toplu İşlem Toplamı"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Toplu İşlem Öge Sayısı"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Toplu İşlem Ödeme Aracı"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Toplu İşlem Verme Tarihi"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Toplu İşlem Verisi"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -82,6 +126,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Üyelikler için Toplu Veri Girişi"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Söz Verilen Ödemeler için Toplu Veri Girişi İşlemi"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Uyumsuzlar Yok Sayılıp Toplu İşleme Devam Edilsin"
 
@@ -90,16 +138,16 @@ msgid "Validate & Process the Batch"
 msgstr "Toplu İşlemi Doğrulayıp Devam Edin"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Bazı alanlar katılmayacak."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Sanal kredi tutarı toplam tutardan büyük olamaz"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Üyelik tipi alanının doldurulması zorunludur."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Tek bir toplu işlem ile tek bir söz verilmiş ödeme işlemi için iki ayrı ödeme kaydedilemez."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -148,6 +196,10 @@ msgstr "Beklenen toplam tutar"
 msgid "Total amount entered"
 msgstr "Yazılan toplam tutar"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Söz Verilmiş Açık Ödemeler (Ödeme Tarihi - Tutar)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Toplu Veri Girişi İşlemleri"
@@ -169,65 +221,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Bu site için henüz bir Toplu Veri Girişi İşlemi oluşturulmamış."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "Toplu İşlem Kodu"
+msgid "Batch Payment Method"
+msgstr "Toplu İşlem Ödeme Yöntemi"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Toplu İşlem Başlığı"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr "VarlıkTopluİşlem Kodu"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Toplu İşlem Açıklaması"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Toplu İşlemi Oluşturan"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Toplu İşlem Oluşturulma Tarihi"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Toplu İşlemi Değiştiren"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Toplu İşlem Değişiklik Tarihi"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Toplu İşlem Akıllı Grubu"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Toplu İşlem Toplamı"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Toplu İşlem Öge Sayısı"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Toplu İşlem Ödeme Aracı"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Toplu İşlem Verme Tarihi"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Toplu İşlem Verisi"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr "VarlıkTopluİşlem Tablosu"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Söz Verilen Ödemeler için Toplu Veri Girişi İşlemi"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Tek bir toplu işlem ile tek bir söz verilmiş ödeme işlemi için iki ayrı ödeme kaydedilemez."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr "Seçilmiş profil için Dosya ya da Otomatik Seçim alan tiplerinde birden çok kaydın Güncellenmesi desteklenmiyor."
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Söz Verilmiş Açık Ödemeler (Ödeme Tarihi - Tutar)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr "Tüm toplu işlem ögelerini yazdığınızda aşağıdaki Doğrulayıp Devam Edin düğmesine tıklayın. Ayrıca isteğinize göre istediğiniz zaman Kaydedip Sonra Devam Edebilirsiniz."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr "Sütunları eklemek, çıkarmak ve sıralamasını değiştirmek için ilgili <a href=\"%1\" target=\"_blank\">Toplu Kayıt Profilini</a> düzenleyin."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr "Gerekiyorsa Özel Alanlar ve Kişisel Kampanya Sayfası alanı eklenebilir."
